--- a/07.Neutron.md
+++ b/07.Neutron.md
@@ -13,39 +13,38 @@
 	- Openstack Compute : liên hệ với compute để gắn mỗi VNIC đến từng máy ảo riêng
 	- Openstack dashboard : người dùng sử dụng để khởi tạo và quản lý các network
 
--  Openstack networking bao gồm các thành phần:
-	-   API server:  
-    - OpenStack Networking API bao gồm hỗ trợ  **Layer 2 networking**  và  **IP address management (IPAM)**, cũng như 1 phần mở rộng cho  **Layer 3 router**  cho phép routing giữa các  **Layer 2 networking**. OpenStack Networking bao gồm 1 danh sách các plug-in cho phép tương tác với các công nghệ mạng mã nguồn mở khác nhau, bao gồm routers, virtual switches, và software-defined networking (SDN) controllers.
-	-   OpenStack Networking plug-in và agents:  
-    Plugs và unplugs ports, tạo network hoặc subnets, và cung cấp địa chỉ IP. Plug-in và agents được chọn khác nhau tùy thuộc và nhà cung cấp và công nghệ được sử dụng trong cloud cụ thể. Điều quan trọng cần đề cập là chỉ có thể sử dụng 1 plug-in trong 1 thời điểm.
-	-   Messaging queue:  
-    Cấp nhận và định tuyến các yêu cầu RPC giữa các agents để hoàn thành các hoạt động API. Message queue là được sử dụng trong  **Ml2 plug-in**  cho RPC giữa neutron server và neutron agents chạy trên mỗi hypervisor,  **ML2 mechanism drivers**  cho  **Open vSwitch**  và  **Linux bridge**.
+Openstack networking bao gồm các thành phần:
+- **neutron-server** : Chấp nhận và chuyển hướng các API request đến các plugin thích hợp để xử lý.
 
-- Network agent : xử lý các tác vụ khác nhau được sử dụng để triển khai mạng ảo. Các agent bao gồm : neutron-dhcp-agent, neutron-l3-agent, neutron-metering-agent, and neutron-lbaas-agent, among others 
-## 1.2. OpenStack Networking integrates
-Openstack networking được thích hợp với nhiều thành phần khác để thành một hệ thống hoàn chỉnh, bao gồm :
+- **Openstack Networking plug-in và agent** : Có chức năng cắm và gỡ port, tạo mạng hoặc subnet, và cung cấp các địa chỉ IP. Các plug-in hay agent sẽ khác phụ thuộc vào nhà cung cấp và các công nghệ được sử dụng trong một môi trường điện toán đám mây cụ thể. Một số agent hoặc plug-in mà neutron cung cấp ví dụ như switch ảo hoặc cứng của Cisco, NEC OpenFlow products, Open vSwitch, Linux bridging, và VMware NSX product. Các agent phổ biến là *L3 agent*(layer 3) và *DHCP agent* và plugin agent.
 
-- Openstack Indentify : dùng để xác thực và   cấp quyền để làm việc với API
-- Openstack compute :  để plug các NIC của máy ảo vào một mạng ảo
-- Openstack Dashboard : sử dụng web-based để quản lý vòng đời của một mạng ảo
+- **Messaging queue** : Được sử dụng để giao tiếp, truyền lệnh và trao đổi thông tin giữa neutron-server với các agent. Nó cũng hoạt động như là một database để lưu trữ trạng thái mạng cho các plug-in cụ thể.
 
 
-## 1.3. Các loại network trong Openstack Networking
+## 1.2. Các loại network trong Openstack Networking
 
 Trong Openstack có 3 loại network gồm : provider,  Routed provider networks và self-service
 
 
-### 1.3.1. : Provider Network
+### 1.2.1. Provider Network
 
-- Provider network cung cấp một network layer 2 tới các instance  với sự hỗ trợ của DHCP và metadata.  Mạng này kết nối hoặc map  tới một network layer 2 có trong datacenter., thường kết hợp với 802.1Q ( VLAN ) 
-- Provider network thường cung cấp sự đơn giản, hiệu năng và độ tin cậy. Chỉ có admin mới có thể quản lý các mạng này vì nó yêu cầu cấu hình hạng tầng mạng vật lý. Provider network chỉ có thể xử lý các frame layer-2 cho các kết nối đến instance, , do đó thiếu chức răng định tuyến và IP floating
-- Nói chung, các thành phần trong Openstack Networking có thể xử lý các hoạt động layer-3 tác động đến hiệu năng và độ tin tưởng, provider network giúp chuyển các hoạt động layer-3 sang hạ tầng mạng vật lý
+Provider network cung cấp kết nối mạng layer 2 cho máy ảo với tùy chọn dịch vụ DHCP và metadata. Mạng này kết nối đến mạng layer 2 đã tồn tại ở datacenter, thường dùng Vlan để định danh và chia mạng.
 
-### 1.3.2. Routed Network 
-- Routed provider networks cung cấp kết nối ở layer 3 cho các máy ảo. Các network này map với những networks layer 3 đã tồn tại. 
-- Cụ thể hơn , mạng này map tới các các mạng layer 2 đã được chỉ định làm provider network .  Mỗi router có một gateway để làm nhiệm vụ định tuyến . . Routed provider networks tất nhiên sẽ có hiệu suất thấp hơn so với provider networks.
+Provider network cung cấp sự đơn giản, hiệu năng và độ tin cậy. Chỉ có Admin user mới có quyền chỉnh sửa Provider network vì nó yêu cầu cấu hình hạ tầng mạng vật lý.
 
-### 1.3.3. Self-service network ( tenant )
+Vì Provider network cung cấp kết nối mạng ở layer 2, do đó nó thiếu đi hỗ trợ các tính năng như router hay floating ip.
+
+Việc sử dụng các thành phần của Openstack Networking để xử lý các hoạt động ở layer-3 sẽ làm ảnh hưởng khá nhiều đến hiệu năng và độ tin cậy của hệ thống. Sử dụng mạng provider, chỉ quản lý mạng layer-2, sẽ chuyển tất cả hoạt động layer-3 cho hạ tầng mạng vật lý xử lý để tăng hiệu năng và độ tin cậy.
+
+Chỉ có người quản trị có thể cấu hình mạng provider.
+
+### 1.2.2. Routed Network 
+
+Routed provider networks cung cấp kết nối ở layer 3 cho các máy ảo. Các network này map với những networks layer 3 đã tồn tại.
+
+Cụ thể hơn , mạng này map tới các các mạng layer 2 đã được chỉ định làm provider network . Mỗi router có một gateway để làm nhiệm vụ định tuyến . . Routed provider networks tất nhiên sẽ có hiệu suất thấp hơn so với provider networks.
+
+### 1.2.3. Self-service network
 
 - Self-service network cho phép các project quản lý các mạng mà không cần quyền admin. Những mạng này hoàn toàn là mạng ảo và yêu cầu một mạng ảo ,sau đó tương tác với provider network và mạng ngoài ( internet ). Self-service thường sử dụng DHCP và meta cho các instance
 - Mong nhiều trường hợp, self-service network sử dụng overload protocol bằng VXLAN, GRE vì chúng có thể hỗ trợ nhiều mạng hơn layer-2 khi sử dụng VLAN ( 802.1q) 
@@ -61,7 +60,7 @@ Trong Openstack hỗ trợ các kiểu cô lập và overplay sau :
 
 <img src="https://github.com/lean15998/Openstack/blob/main/images/07.01.png">
 
-### 1.3.4. Một số khái niệm bổ sung 
+### 1.2.4. Một số khái niệm bổ sung 
 
 - **Subnet** : mà một block có thể sử dụng cho host và các địa chỉ liên quan . Subnet được sử dụng để gắn các địa chỉ IP khi một port được khởi tạo
 - **Subnet pool** : 
@@ -92,8 +91,9 @@ Trong Openstack hỗ trợ các kiểu cô lập và overplay sau :
 L3 agent là một phần của package openstack-neutron. Nó được xem như router layer-3 chuyển hướng lưu lượng và cung cấp dịch vụ gateway cho network lớp 2. Các nodes chạy L3 agent không được cấu hình IP trực tiếp trên một card mạng. Thay vì thế, sẽ có một dải địa chỉ IP từ mạng ngoài được sử dụng cho OpenStack networking. Các địa chỉ này được gán cho các routers mà cung cấp liên kết giữa mạng trong và mạng ngoài. Miền địa chỉ được lựa chọn phải đủ lớn để cung cấp địa chỉ IP duy nhất cho mỗi router khi triển khai cũng như mỗi floating IP gán cho các máy ảo.
 
 -   **DHCP Agent:**  OpenStack Networking DHCP agent chịu trách nhiệm cấp phát các địa chỉ IP cho các máy ảo chạy trên network. Nếu agent được kích hoạt và đang hoạt động khi một subnet được tạo, subnet đó mặc định sẽ được kích hoạt DHCP.
--   **Plugin Agent:**  Nhiều networking plug-ins được sử dụng cho agent của chúng, bao gồm OVS và Linux bridge. Các plug-in chỉ định agent chạy trên các node đang quản lý lưu lượng mạng, bao gồm các compute node, cũng như các nodes chạy các agent
-## 1.4. Cấu trúc thành phần và dịch vụ 
+-   **Plugin Agent:**  Nhiều networking plug-ins được sử dụng cho agent của chúng, bao gồm OVS và Linux bridge. Các plug-in chỉ định agent chạy trên các node đang quản lý lưu lượng mạng, bao gồm các compute node, cũng như các nodes chạy các agent.
+
+## 1.3. Cấu trúc thành phần và dịch vụ 
 
 ### Server
 
@@ -132,54 +132,66 @@ Các dịch vụ Routing
 -   FWaaS: Firewall-as-a-Service (FWaaS), API thử nghiệm cho phép các nhà cung cấp kiểm thử trên networking của họ.
 
 
-# 2. Làm việc với Neutron
+# 2. Tìm hiểu Namepsace , DHCP, Agent và kiến trúc của Neutron
 
-# 3. Tìm hiểu Namepsace , DHCP, Agent trong OPS
+## 2.1. Network Namespace.
 
-## 3.1. Overlapping network trong OPS
+- **Namespace** được sử dụng để cô lập, khoanh vùng các định danh - các định danh ở đây có thể là process id, routing table, mount point, user id.  
 
--  Overlapping được hiểu là một mạng máy tính được xây dựng trên một nền tảng network mạng sẵn
--  Openstack cung cấp môi trường Multi Tenant . Mỗi tenant cung cấp một mạng prviate , router, firewall , loadblancer riêng . Nhờ namepsace cung cấp khả năng tách biết các tài nguyên mạng giữa các tenant - network namespace
-- Để xem được namepsace có thể sử dụng 
-```bash
-[root@controller nova]# ip netns list
-qrouter-32fe6f32-5bb6-4a89-a24f-df34124e8c76 (id: 2)
-qdhcp-355f6ca6-15f7-4121-a82b-6ee6f4d5fea3 (id: 0)
-[root@controller nova]# 
+- Ví dụ, Linux cung cấp các namespace cho mạng(network namespace), các tiến trình, và một số thứ khác. Khi một tiến trình màn chạy trong một namespace, nó chỉ có thể thấy và giao tiếp với các tiến trình khác trong cùng namespace đó. Ví dụ một tiến trình bash ở trong một name space, khi chạy lệnh `ps waux`, nó sẽ chỉ hiển thị các tiến trình trong cùng namespace đó.
+
+### Linux network namespace.
+
+- Trong một network namespace, định danh được khoanh vùng phạm vi ở đây là các thiết bị mạng; Các thiết bị mạng trên hệ thống nếu không có cấu hình đặc biệt nào thì nó sẽ nằm cùng trên một network namespace mặc định. Các thiết bị mạng có thể được tạo, xóa hoặc chuyển từ namespace này sang namespace khác. 
+
+- Mỗi network namespace có một routing table riêng.
+
+- Mỗi namespace có một bảng các rule iptables riêng(cả IPv4 lẫn IPv6).
+
+- Bất kỳ tiến trình Linux cụ thể nào cũng chạy trên một network namespace cụ thể.  Mặc định, nó sẽ thừa hưởng namespace từ tiến trình cha, như một tiến trình có khả năng phù hợp có thể tự chuyển nó sang một network namespace khác.(thường được sử dụng với câu lệnh `ip netns exec NETNS COMMAND...`).
+### Lợi ích của Namespace
+
+- **Overlapping IPs**: Một lợi ích lớn của việc triển khai namespace trong Neutron là các người dùng có thể tạo các địa chỉ IP chồng chéo, điều này đem lại sự tự do cho người dùng cloud vì họ có thể tự do tạo bất kỳ subnet nào mà không sợ bị trùng dải địa chỉ với người dùng khác. 
+
+- *Linux Network Namespace* được yêu cầu cho node mà chạy *neutron-l3-agent* hoặc *neutron-dhcp-agent* nếu overlapping IPs được sử dụng.
+
+- **L3 agent**: neutron-l3-agent được thiết kế để sử dụng network namespaces để cung cấp nhiều router ảo độc lập, mà không ảnh hưởng đến các router khác hoặc cơ chế định tuyến của compute node mà nó được đặt trên.
+  
+
+### Một số câu lệnh làm việc với network namespace.
+- Liệt kê các network namespace:
 ```
-- Các namespace hiển thị dưới dạng 
-	-   qdhcp-*
-	-   qrouter-*
-	-   qlbaas-*
-- Để thực hiện một comman trên một namespace có thể sử dụng
+ip netns list
 ```
-[root@controller nova]# ip netns exec qrouter-32fe6f32-5bb6-4a89-a24f-df34124e8c76 ping 1.1.1.1
-PING 1.1.1.1 (1.1.1.1) 56(84) bytes of data.
-64 bytes from 1.1.1.1: icmp_seq=1 ttl=57 time=37.3 ms
-64 bytes from 1.1.1.1: icmp_seq=2 ttl=57 time=37.7 ms
-64 bytes from 1.1.1.1: icmp_seq=3 ttl=57 time=38.3 ms
-64 bytes from 1.1.1.1: icmp_seq=4 ttl=57 time=38.8 ms
-64 bytes from 1.1.1.1: icmp_seq=5 ttl=57 time=37.4 ms
-^C
---- 1.1.1.1 ping statistics ---
-5 packets transmitted, 5 received, 0% packet loss, time 4001ms
-rtt min/avg/max/mdev = 37.317/37.923/38.822/0.601 ms
+```
+[root@os-controller ~]# ip netns list
+qrouter-c1e9e77b-41ff-4c88-b28a-4460ca8df627 (id: 2)
+qdhcp-4fa7b8b7-9c83-48c8-b0f2-7a088f95342f (id: 1)
+qdhcp-0fb7bb30-ae0d-4bc6-8455-2871f72f1b74 (id: 0)
+```
+
+- Thực thi câu lệnh trong namespace:
+```
+ip netns exec <namespace> <command>
+```
+```
+[root@os-controller ~]# route
+Kernel IP routing table
+Destination     Gateway         Genmask         Flags Metric Ref    Use Iface
+default         gateway         0.0.0.0         UG    100    0        0 eth0
+192.168.30.0    0.0.0.0         255.255.255.0   U     100    0        0 eth0
+192.168.40.0    0.0.0.0         255.255.255.0   U     101    0        0 eth1
+[root@os-controller ~]# ip netns exec qdhcp-0fb7bb30-ae0d-4bc6-8455-2871f72f1b74 route
+Kernel IP routing table
+Destination     Gateway         Genmask         Flags Metric Ref    Use Iface
+default         gateway         0.0.0.0         UG    0      0        0 ns-aa407ac9-74
+link-local      0.0.0.0         255.255.0.0     U     0      0        0 ns-aa407ac9-74
+192.168.50.0    0.0.0.0         255.255.255.0   U     0      0        0 ns-aa407ac9-74
 
 ```
-Như vậy router đã tạo từ trước, gắn network `net_ex` đã có thể giao tiếp với internet
-
-
-- Khi một namespace khởi tạo , neutron cũng khởi tạo đồng thời một DHCP and routing service cho từng network riêng biệt. 
-- Namespace qdhcp chứa DHCP Service cung cấp địa chỉ IP cho các instance sử dụng DHCP Protocol . Trong quá thực hiện, ``dnsmasq`` đảm nhiệm xử lý các DHCP Request . qdhcp namespace như một host ảo, được cắm vào một interface trong virtual switch, do đó sẽ có khả năng kết nối với các instance đã được gắn vào network nào đó.  
-- Namesapce qrouter như một router ảo , và đảm nhiệm routing từ các instance được gắn vào network . Router được gắn vào các network khác nhau có thể routing giữa các mạng2
-
-
 
 
 ## 3.2. Neutron Agent
-
-
-
 
 - Một agent trong neutron đảm nhiệm các nhiệm vụ khác nhau để tác động tới các mạng ảo . Trong neutron gồm các agent cơ bản sau : neutron-dhcp-agent, neutron-l3-agent, neutron-metering-agent, and neutron-lbaas-agent,
 - Các agent cơ bản khi khi triển khai ` self-service network`
